--- a/templates/new.html
+++ b/templates/new.html
@@ -1,25 +1,25 @@
 {% extends "layout.html" %}
 {% block body %}
   <form action="" method=post class="form-horizontal">
-    <h2>Create New Todo</h2>
+    <h2>New Task</h2>
     <div class="control-group">
         <div class="controls">
           <input type="text" id="title" name="title" class="input-xlarge"
-            placeholder="Please give title to todo item" value="{{ request.form.title }}"
+            placeholder="a short description for your task" value="{{ request.form.title }}"
             required>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
-          <textarea name="text" rows=10 class="input-xlarge" placeholder="describle the todo item" required>{{ request.form.text }}</textarea>
+          <textarea name="text" rows=10 class="input-xlarge" placeholder="add extra notes here&hellip;" required>{{ request.form.text }}</textarea>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">Create Todo</button>
-          <a href="{{ url_for('index') }}">Back to list</a>
+          <a href="{{ url_for('index') }}">Back</a>
+          <button type="submit" style='position:relative;left:145px;' class="btn btn-primary btn-large">Create Task</button>
         </div>
     </div>
   </form>
