--- a/templates/view.html
+++ b/templates/view.html
@@ -1,32 +1,31 @@
 {% extends "layout.html" %}
 {% block body %}
   <form action="" method=post class="form-horizontal">
-    <h2>Create New Todo</h2>
+    <h2>Todo:</h2>
     <div class="control-group">
         <div class="controls">
           <input type="text" id="title" name="title" class="input-xlarge"
-            placeholder="Please give title to todo item" value="{{ todo.title }}"
+            placeholder="describe your objective" value="{{ todo.title }}"
             required>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
-          <textarea name="text" rows=10 class="input-xlarge" placeholder="describle the todo item" required>{{ todo.text }}</textarea>
+          <textarea name="text" rows=10 class="input-xlarge" placeholder="add more notes here&hellip;" required>{{ todo.text }}</textarea>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
-          <input type=checkbox name=done.{{ todo.id }}{{ " checked" if todo.done }}>
+          <span>Done</span> <input style='margin-left:10px;' type=checkbox name=done.{{ todo.id }}{{ " checked" if todo.done }}>
         </div>
     </div>
 
-
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">Update Todo</button>
-          <a href="{{ url_for('index') }}">Back to list</a>
+          <a href="{{ url_for('index') }}">Cancel</a>
+          <button style='position:relative;left:145px;' type="submit" class="btn btn-large btn-success">Save</button>
         </div>
     </div>
   </form>
